...
            <TextView style="@style/Widget.SubHub.SectionHeader" android:text="@string/help_rework_tools" />
            <Button android:id="@+id/help_diagnostics" style="@style/Widget.SubHub.CompactOutlineButton"
                android:layout_width="match_parent" android:layout_marginTop="@dimen/ui_gap_group" android:text="@string/diagnostics_title" />
        </LinearLayout>
        <TextView style="@style/Widget.SubHub.SectionHeader" android:text="@string/help_rework_questions"
            android:layout_marginHorizontal="@dimen/page_margin" android:layout_marginTop="22dp" />
        <EditText android:id="@+id/help_search" style="@style/Widget.SubHub.Input"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/page_margin" android:layout_marginTop="@dimen/ui_gap_group"
            android:minHeight="48dp" android:hint="@string/help_rework_search"
            android:contentDescription="@string/help_rework_search" android:inputType="text"
            android:imeOptions="actionDone" android:maxLines="1" android:singleLine="true" />
        <TextView android:id="@+id/help_no_results" android:layout_width="match_parent"
...
