<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/primary_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/primary_header_height"
    android:background="@drawable/bg_header_card"
    android:gravity="center_vertical"
    android:orientation="horizontal"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/primary_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:letterSpacing="0.06"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/ui_text_title"
...
